--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,13 +1,12 @@
-earthengine-api
-google-api-python-client
-numpy
-Paste
-Pillow
-pycrypto
-pyOpenSSL
-PyYAML
-setuptools
-requests
-vectors
-webapp2
-WebOb
+earthengine-api==0.1.170
+google-api-python-client==1.5.3
+numpy==1.11.2
+Paste==2.0.3
+Pillow==2.0.0
+pycrypto==2.6.1
+pyOpenSSL==2.6.1
+PyYAML==3.10
+requests==2.6.0
+vectors==1.0.0
+webapp2==2.5.2
+WebOb==1.6.1
